src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accepts_Residents_for_Moonlighting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Residents for Moonlighting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account External ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Marketing_Status__c</fullName>
        <description>Track Historical Marketing Status</description>
        <label>Account Marketing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lost - Did Not Make Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Incumbent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Duty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Duty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Billable_Volume__c</fullName>
        <label>Actual Billable Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Facility_Volume__c</fullName>
        <label>Actual Facility Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcuteCare__c</fullName>
        <label>AcuteCare</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acute_Beds__c</fullName>
        <label>Acute Beds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_Doc_City__c</fullName>
        <label>Add Doc City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Doc_Contact__c</fullName>
        <label>Add Doc Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Doc_State__c</fullName>
        <label>Add Doc State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Doc_Street__c</fullName>
        <label>Add Doc Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Doc_Zip__c</fullName>
        <label>Add Doc Zip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Discharge__c</fullName>
        <label>Annual Discharge</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Outpatient_Combined__c</fullName>
        <label>Annual Outpatient Combined</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Regular_Subsidy__c</fullName>
        <description>Regular ER Subsidy</description>
        <label>Annual Regular Subsidy</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_Protector__c</fullName>
        <description>Annual ER Volume Protector</description>
        <label>Annual Volume Protector</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attestation_Opportunity__c</fullName>
        <label>Attestation Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attestation_Opporunity__c</fullName>
        <label>Attestation Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Daily_Census_Inpatient__c</fullName>
        <label>Avg Daily Census - Inpatient</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_Exam_Wait_Time__c</fullName>
        <label>Avg Exam Wait Time</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_Update_Name__c</fullName>
        <description>Blue Book Facility Name as of 7/1/06</description>
        <label>BB Update Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBS__c</fullName>
        <label>BCBS</label>
        <picklist>
            <picklistValues>
                <fullName>Par</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Par</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BC_BS__c</fullName>
        <label>BC/BS %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup__c</fullName>
        <description>Backup2 from TSG Data; If there crisis/overflow; what are the hospital backup systems</description>
        <label>Backup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_Pay__c</fullName>
        <description>from facility4v5.22.xls</description>
        <inlineHelpText>Physician blended hourly rate excluding RPP/Bonus</inlineHelpText>
        <label>Base Pay</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_RVU__c</fullName>
        <label>Baseline RVU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_for_EKG__c</fullName>
        <label>Bill for EKG</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Co_Division__c</fullName>
        <label>Billing Co Division</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Company__c</fullName>
        <description>from facility2.xls, owner mgt -- This will be in the Billing Related List. Confirm no data prior to deletion.</description>
        <label>Billing Company</label>
        <picklist>
            <picklistValues>
                <fullName>EMBCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synergistics Systems, Inc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_BOB_Additional_Pay__c</fullName>
        <label>Budget Additional Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_BOB_GM__c</fullName>
        <label>Budget GM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Overall_Pt_Per_Hour__c</fullName>
        <label>Budget Overall Pt. Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Phy_Pt_Per_Hour__c</fullName>
        <label>Budget Phy. Pt. Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_RVU_per_Pt__c</fullName>
        <label>Budget RVU per Pt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Responsibility</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Vol_Trend__c</fullName>
        <label>Budget Vol Trend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budget_Volume__c</fullName>
        <label>Budget Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCU_Beds__c</fullName>
        <label>CCU Beds</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEP_Comment__c</fullName>
        <label>CEP Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEP_Group_NPI_ID__c</fullName>
        <description>This is a Provider Enrollment field that contains the Insurance Group National Provider ID.  This is tracked in OneApp and created as a PE requirement.</description>
        <label>CEP Group NPI ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_Rec_Date__c</fullName>
        <description>Carrier Enrollment Package Received Date</description>
        <label>CEP Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEP_Sent_Date__c</fullName>
        <description>Carrier Enrollment Package Sent Date.  Sent package to Carrier to fill out.</description>
        <label>CEP Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEP_Start_Date__c</fullName>
        <description>Carrier Enrollment Package Started Date</description>
        <label>CEP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cafeteria_Hours__c</fullName>
        <description>Use at startup to records the:  Cafeteria Hours</description>
        <label>Cafeteria Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caid_Mg_Care__c</fullName>
        <label>Caid Mg.Care %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Care_Mg_Care__c</fullName>
        <description>* Emergency Department Payor Mix (as a percent of emergency room patient volume and not charges)</description>
        <label>Care Mg.Care %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>billing_carrier_lookup__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chest_Pain_Center_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chest Pain Center Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildFacOnly__c</fullName>
        <label>ChildFacOnly</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class from Facility 5</description>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Start_Up_Time_Zone__c</fullName>
        <label>Client Start Up Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Statup_Date__c</fullName>
        <description>Date contract begins.  Filled in by Contracting.</description>
        <label>Client Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Termination_Time_Zone__c</fullName>
        <label>Client Termination Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Com_Ins__c</fullName>
        <description>Enter Commerical Insurance Percentage using format xx.x</description>
        <label>Com. Ins %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Command_Regulations__c</fullName>
        <label>Command Regulations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Community_Comments__c</fullName>
        <description>Enter things to do and see in the area.</description>
        <label>Community Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Website_1__c</fullName>
        <label>Area Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Community_Website_2__c</fullName>
        <label>Nature/Culture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Community_Website_3__c</fullName>
        <label>Unique Features/Events</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Compensation_Type__c</fullName>
        <label>Compensation Type</label>
        <picklist>
            <picklistValues>
                <fullName>RVU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly with SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly with Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly with SRP/Incentive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contracting will check this box the 1st day the contract is active.  Once contract is terminated contracting will uncheck the box the day it terminates.</description>
        <label>Contract Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Termination__c</fullName>
        <label>Contract Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Stage of Contract</description>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Marketed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSG Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracting_Method__c</fullName>
        <label>Contracting Method</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Measures_Composite__c</fullName>
        <label>Core Measures Composite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Corp_Entities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be on the Billing related list. Confirm no data prior to deletion.</description>
        <inlineHelpText>TSG affiliated corporate entity.</inlineHelpText>
        <label>Corporate Entity</label>
        <referenceTo>Corp_Entities__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Corporate_Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Entity_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Entity 2</label>
        <referenceTo>Corp_Entities__c</referenceTo>
        <relationshipLabel>Accounts (Corporate Entity 2)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_User_Month__c</fullName>
        <label>Cost/User/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_User_Year__c</fullName>
        <label>Cost/User/Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County for Physical Location,  County from TSG</description>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageSummary__c</fullName>
        <description>Used by Sales and Marketing to put in an overview of hours.</description>
        <label>Coverage Summary Pre-Sale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Hour_Comments__c</fullName>
        <description>TSG &quot;Shifts&quot; field</description>
        <label>Coverage Hour Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <description>Coverage Type provided for this Account.</description>
        <label>Coverage Type</label>
        <picklist>
            <picklistValues>
                <fullName>EM - Acute Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Fast Track (within ED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Urgent Care (outside ED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Rapid Medical Exam (RME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Intermediate Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Acute Care Double Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM - Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM - Peds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_April__c</fullName>
        <label>Credentials Committee Meeting - April</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Aug__c</fullName>
        <label>Credentials Committee Meeting - Aug</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Dec__c</fullName>
        <label>Credentials Committee Meeting - Dec</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Feb__c</fullName>
        <label>Credentials Committee Meeting - Feb</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Jan__c</fullName>
        <label>Credentials Committee Meeting - Jan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_July__c</fullName>
        <label>Credentials Committee Meeting - July</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_June__c</fullName>
        <label>Credentials Committee Meeting - June</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_March__c</fullName>
        <label>Credentials Committee Meeting - March</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_May__c</fullName>
        <label>Credentials Committee Meeting - May</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Nov__c</fullName>
        <label>Credentials_Committee Meeting - Nov</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Oct__c</fullName>
        <label>Credentials Committee Meeting - Oct</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credentials_Committee_Meeting_Sept__c</fullName>
        <label>Credentials Committee Meeting - Sept</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_BOB_Additional_Pay__c</fullName>
        <label>BOB Additional Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_BOB_GM__c</fullName>
        <label>BOB GM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Bob_Excess_Pay__c</fullName>
        <label>BOB Excess Base Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Vol_Trend__c</fullName>
        <label>Current Vol Trend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEL_Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =50,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)=0,&quot;Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Physical_Address__c)=0, &quot;Physical_Address__c, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Website)=0, &quot;Website&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEL     Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEL_Data_Quality_Score__c</fullName>
        <formula>IF(LEN(Website) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( LEN( Physical_Address__c ) = 0, 0,10) + IF(LEN( Name) = 0, 0, 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEL_Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Census__c</fullName>
        <label>Daily Census</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c = 100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)=0,&quot;Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Physical_Address__c)=0, &quot;Physical_Address__c, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Website)=0, &quot;Website&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(Website) = 0, 0,25) + IF(LEN( Phone ) = 0, 0,25) + IF( LEN(  Physical_Address__c ) = 0, 0,25) + IF(LEN( Name) = 0, 0, 25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Decline__c</fullName>
        <description>from facility4v5.22.xls</description>
        <label>Date of Decline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designated_Hot_Spot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Designated Hot Spot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>CASE(Text(Region__c), 
&quot;HM East&quot;,&quot;Hospital Medicine&quot;,
&quot;HM West&quot;,&quot;Hospital Medicine&quot;,
&quot;HM Central&quot;,&quot;Hospital Medicine&quot;,
&quot;UC&quot;,&quot;Urgent Care&quot;,
&quot;MW&quot;,&quot;Central&quot;,
&quot;MW II&quot;,&quot;Central&quot;,
&quot;SE&quot;,&quot;East&quot;, 
&quot;SE II&quot;,&quot;East&quot;, 
&quot;SE III&quot;,&quot;East&quot;, 
&quot;SE III&quot;,&quot;East&quot;, 
&quot;SE IV&quot;,&quot;East&quot;, 
&quot;SE V&quot;,&quot;East&quot;, 
&quot;SC I&quot;, &quot;Central&quot;, 
&quot;SC II&quot;, &quot;Central&quot;, 
&quot;SC III&quot;, &quot;Central&quot;, 
&quot;SC IV&quot;, &quot;Central&quot;, 
&quot;SW I&quot;, &quot;West&quot;, 
&quot;SW II&quot;, &quot;West&quot;, 
&quot;SW III&quot;, &quot;West&quot;, 
&quot;SW IV&quot;, &quot;West&quot;, 
&quot;SW V&quot;, &quot;West&quot;, 
&quot;GL&quot;, &quot;West&quot;, 
&quot;GL I&quot;, &quot;West&quot;, 
&quot;GL II&quot;, &quot;West&quot;, 
&quot;WW&quot;, &quot;Wellness Works&quot;, 
&quot;WW1&quot;, &quot;Wellness Works&quot;, 
&quot;WW2&quot;, &quot;Wellness Works&quot;, 
&quot;WW3&quot;, &quot;Wellness Works&quot;, 
&quot;WW4&quot;, &quot;Wellness Works&quot;,
&quot;WW5&quot;, &quot;Wellness Works&quot;,
&quot;WW6&quot;, &quot;Wellness Works&quot;, 
&quot;CM&quot;,&quot;Care Management&quot;,
&quot;PT&quot;,&quot;Physical Therapy&quot;,    
&quot;No Region Entered&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_TSG_bill_for_QMP_patients__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does / should TSG bill the QMP patients?</description>
        <label>Does TSG bill for QMP patients?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downcode_Opportunity__c</fullName>
        <label>Downcode Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Downcode__c</fullName>
        <label>Downcode %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Driving_Directions__c</fullName>
        <label>Nearby Cities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Billable_Volume__c</fullName>
        <inlineHelpText>Source from Hospital until become a customer then from BOB (estimated)</inlineHelpText>
        <label>ED Billable Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Description__c</fullName>
        <description>ED Layout from TSG; Includes info such as # of Bed, Shift overview, etc</description>
        <label>ED Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ED_Fax__c</fullName>
        <label>ED Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ED_Payor_Mix_Total__c</fullName>
        <formula>BC_BS__c  +  Caid_Mg_Care__c  +  Care_Mg_Care__c  +  Com_Ins__c  +  HMO_PPO__c  +  Medicaid__c  +  Medicare__c  +   Other_explain_all_other_categories__c  +  Self_Pay__c  +  Work_Comp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payor Mix Total %:</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ED_Phone_Extension__c</fullName>
        <label>ED Phone Ext</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ED_Phone__c</fullName>
        <description>ED Phone Number - Needed for Hospital Facility Sheets</description>
        <label>ED Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ED_Proposal_Volume__c</fullName>
        <description>Proposed Billable Emergency Department Patient Volume</description>
        <label>ED Proposal Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Region__c</fullName>
        <description>Used on Non-ED Accounts to pull the ED Region field from the related ED &quot;Parent&quot; Account. Field was created to allow Non_ED regions to report on Regions. This field should appear on Non-ED Account Layouts.</description>
        <formula>IF(
OR(ISPICKVAL(Region__c,&quot;HM Central&quot;),ISPICKVAL(Region__c,&quot;HM West&quot;),ISPICKVAL(Region__c,&quot;HM East&quot;),ISPICKVAL(Region__c,&quot;WW&quot;),ISPICKVAL(Region__c,&quot;CM&quot;),ISPICKVAL(Region__c,&quot;UC&quot;),ISPICKVAL(Region__c,&quot;PT&quot;)),
BLANKVALUE( TEXT(Parent.Region__c),&quot;No ED Region&quot;),
TEXT( Region__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ED Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Volume__c</fullName>
        <description>Emergency Room Annual Volume.</description>
        <label>ED Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPBSHospID__c</fullName>
        <label>EPBSHospID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPBS_Transition_Date__c</fullName>
        <label>EPBS Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Group_Description__c</fullName>
        <description>A brief description of the ER Group before standardization</description>
        <label>ER Group Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>